Fixed letter-spacing

--- a/less/page2TextItem.less
+++ b/less/page2TextItem.less
@@ -2,6 +2,7 @@
     margin: -20px 0px -20px -20px;
     width: 100%;
     padding: 20px;
+    letter-spacing: 0px;
 }
 .page2file-drawer .savetotxt:before {
     content: "\e646";
